--- a/www/index.html
+++ b/www/index.html
@@ -92,22 +92,27 @@
 				<div class="main-slider">
 					<!-- slide -->
 					<div class="slide">
-						<img src="images/main-slider-img.jpg" alt="" width="" height="" />
+						<img src="images/main-slider-img.jpg" alt="" width="" height="" class="slider-image" />
 						<!-- desc -->
-						<div class="desc">
-							<p class="title">Clean <b>Design</b></p>
-							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered <a href="#">alteration</a> in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a <a href="#">passage of Lorem Ipsum</a>.</p>
-							<a href="#" class="btn">Get Started Now!</a>
+						<div class="container">
+							<div class="desc col-sm-7 col-sm-offset-2">
+								<h1>Clean <b>Design</b></h1>
+								<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered <a href="#">alteration</a> in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a <a href="#">passage of Lorem Ipsum</a>.</p>
+								<p><a href="#" class="btn btn-primary">Get Started Now!</a></p>
+							</div>
 						</div>
+						
 					</div>
 					<!-- slide -->
 					<div class="slide">
-						<img src="images/main-slider-img.jpg" alt="" width="" height="" />
+						<img src="images/main-slider-img.jpg" alt="" width="" height="" class="slider-image" />
 						<!-- desc -->
-						<div class="desc">
-							<p class="title">Clean <b>Design</b></p>
-							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered <a href="#">alteration</a> in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a <a href="#">passage of Lorem Ipsum</a>.</p>
-							<a href="#" class="btn">Get Started Now!</a>
+						<div class="container">
+							<div class="desc col-sm-7 col-sm-offset-2">
+								<h1>Clean <b>Design</b></h1>
+								<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered <a href="#">alteration</a> in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a <a href="#">passage of Lorem Ipsum</a>.</p>
+								<p><a href="#" class="btn btn-primary">Get Started Now!</a></p>
+							</div>
 						</div>
 					</div>
 				</div>
