--- a/www/index.html
+++ b/www/index.html
@@ -87,6 +87,7 @@
 			</header>
 			<!-- END HEADER -->
 
+
 			<!-- MAIN-SLIDER -->
 			<div class="main-slider-wrapper">
 				<div class="main-slider">
@@ -118,6 +119,37 @@
 				</div>
 			</div>
 			<!-- END MAIN-SLIDER -->
+
+
+			<!-- WORK-PROCESS -->
+			<div class="work-process">
+				<div class="container">
+					<p class="title">Locco is <span>extremely</span> simple, beautiful and fully responsive.</p>
+					<p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum, nulla vel pellentesque consequat, ante nulla hendrerit arcu, ac tincidunt mauris lacus sed leo. vamus suscipit molestie vestibulum.</p>
+
+					<div class="item col-md-3 col-sm-6 col-xs-6">
+						<img src="images/work-process-img1.jpg" alt="" width="250" height="250" class="img-responsive thumbnail">
+						<p class="title">Client meet</p>
+					</div>
+
+					<div class="item col-md-3 col-sm-6 col-xs-6">
+						<p class="title">Generate idea</p>
+						<img src="images/work-process-img2.jpg" alt="" width="250" height="250" class="img-responsive thumbnail">
+					</div>
+
+					<div class="item col-md-3 col-sm-6 col-xs-6">
+						<img src="images/work-process-img3.jpg" alt="" width="250" height="250" class="img-responsive thumbnail">
+						<p class="title">Working</p>
+					</div>
+
+					<div class="item col-md-3 col-sm-6 col-xs-6">
+						<p class="title">Ready !</p>
+						<img src="images/work-process-img4.jpg" alt="" width="250" height="250" class="img-responsive thumbnail">
+					</div>
+
+				</div>
+			</div>
+			<!-- END WORK-PROCESS -->
 
 		</div>
 		<!-- END MAIN -->
